--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -6,7 +6,7 @@
 
 :root {
   --background: #1B3540;
-  --text1: #FBBC89;
+  --fore1: #FBBC89;
   --text2: #1E3A45;
 }
 
@@ -17,7 +17,7 @@ body {
   background: var(--background);
   font-family: "Noto Serif", serif;
   font-optical-sizing: auto;
-  font-weight: 700;
+  font-weight: 300;
   font-style: normal;
 }
 
